--- a/styles.css
+++ b/styles.css
@@ -63,22 +63,20 @@ body {
 .picture {
     width: 90%;
     margin: 3%;
+    border: 1px solid black;
 }
 
 #quote-1 {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    text-align: right;
     margin: 3% 6.5% 3% 0;
+    line-height: 1.6;
 }
 
 
 #quote-2 {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: start;
+    text-align: left;
     margin: 3% 0 0 5.5%;
+    line-height: 1.6;
 }
 
 p {
@@ -150,4 +148,125 @@ p {
 #footer-tag {
     font-size: 120%;
     transition: 0.5s;
+    color: gray;
+}
+
+#footer-tag:hover {
+    color: black;
+}
+/* ABOUT-SECTION */
+#about-section {
+    text-align: left;
+    margin: 5.5%;
+    font-size: 120%;
+    line-height: 1.6;
+}
+
+/* CALLIPRAPHY-SECTION */
+.callipraphy-control {
+    display: flex;
+    align-items: center;
+    margin: 5.5% 4% 5.5% 5.5%;
+    font-size: 110%;
+    line-height: 1.6;
+}
+
+.calli-img {
+    width: 40%;
+    border: 1px solid black;
+}
+
+.calli-para-right {
+    text-align: left;
+    margin-left: 4%;
+}
+
+.calli-para-left {
+    text-align: left;
+    margin-right: 4%;
+}
+
+.callipraphy-control-center {
+    align-items: center;
+    margin: 5.5% 4% 5.5% 5.5%;
+    font-size: 110%;
+    line-height: 1.6;
+}
+
+.calli-para-center {
+    text-align: left;
+}
+
+#placecards-img {
+    margin-top: 7%;
+    width: 50%;
+}
+
+#sinage-img {
+    margin-top: 7%;
+    width: 80%;
+}
+
+@media only screen and (max-width: 750px) {
+    #logo {
+        width: 60%;
+    }
+    
+    #quote-1 {
+        font-size: 95%;
+    }
+
+    #quote-2 {
+        font-size: 95%;
+    }
+
+    .callipraphy-control {
+         display: block;
+         font-size: 120%;
+    }
+
+    .calli-img {
+         width: 100%;
+    }
+
+    #placecards-img {
+        width: 100%;
+    }
+
+    .calli-para-right {
+        margin: 0;
+    }
+
+    .calli-para-left {
+        margin-bottom: 3%;
+    }
+
+    #sinage-img {
+        width: 100%;
+    }
+
+    #bot-control {
+        margin: 20%;
+    }
+
+    .bot-btn {
+        margin: 1.5%;
+    }
+
+    .picture {
+        width: 90%;
+        height: 300px;
+    }
+
+    #find-me-img {
+        width: 80%;
+    }
+
+    #find-me-icon {
+        margin: 4% 0 8%;
+    }
+
+    .custom-icon {
+        margin: 0 15%;
+    }
 }
