--- a/styles.css
+++ b/styles.css
@@ -1,272 +1,376 @@
 body {
-   text-align: center;
-   background-color: blanchedalmond;
+  text-align: center;
+  background-color: blanchedalmond;
+  font-family: "Nunito", sans-serif;
 }
 
 #logo {
-    width: 30%;
-    padding: 2%;
-    margin-bottom: 1.5%;
+  width: 30%;
+  padding: 2%;
+  margin-bottom: 1.5%;
+  transition: 0.5s;
 }
 
 #top-bar {
-    display:flex;
-    justify-content: center;
-    
+  display: flex;
+  justify-content: center;
+}
+
+#top-bar:hover .top-btn {
+  color: lightgray;
+}
+
+#top-bar:hover .top-btn:hover {
+  color: black;
 }
 
 .top-control-item {
-    margin: 0 2%;
+  margin: 0 2%;
 }
 
 /* --- DROP DOWN --- */
 #dropdown {
-    position: relative;
-    display: inline-block;
+  position: relative;
+  display: inline-block;
 }
 
 #dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 180%;
-    z-index: 1;
-    transition: 0.5s;
-  }
-
-#dropdown-content a {
-    color: gray;
-    padding: 8%;
-    text-decoration: none;
-    display: block;
-    transition: 0.2s;
-    font-size: 90%;
-    background-color: blanchedalmond;
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 180%;
+  z-index: 1;
+  transition: 0.5s;
 }
 
-#dropdown-content a:hover {color: black;}
-#dropdown:hover #dropdown-content {display: block;}
+#dropdown-content a {
+  color: gray;
+  padding: 4%;
+  text-decoration: none;
+  display: block;
+  transition: 0.2s;
+  font-size: 90%;
+  background-color: blanchedalmond;
+  transition: 0.5s;
+}
+
+#dropdown-content a:hover {
+  color: black;
+}
+#dropdown:hover #dropdown-content {
+  display: block;
+}
 /* --- DROP DOWN --- */
 
 .top-btn {
-    text-decoration: none;
-    color: gray;
-    font-size: 130%;
-    transition: 0.5s;
+  text-decoration: none;
+  color: gray;
+  font-size: 120%;
+  transition: 0.5s;
 }
 
 .top-btn:hover {
-    color: black;
-    
+  color: black;
 }
 
 .picture {
-    width: 90%;
-    margin: 3%;
-    border: 1px solid black;
+  width: 90%;
+  margin: 3%;
+  border: 1px solid black;
+  transition: 0.5s;
 }
 
 #quote-1 {
-    text-align: right;
-    margin: 3% 6.5% 3% 0;
-    line-height: 1.6;
+  text-align: right;
+  margin: 3% 6.5% 3% 0;
+  line-height: 1.6;
 }
 
-
 #quote-2 {
-    text-align: left;
-    margin: 3% 0 0 5.5%;
-    line-height: 1.6;
+  text-align: left;
+  margin: 3% 0 0 5.5%;
+  line-height: 1.6;
 }
 
 p {
-    color: gray;
-    margin: 0.5% 0;
-    font-size: 120%;
+  color: gray;
+  margin: 0.5% 0;
+  font-size: 120%;
 }
 
 #bot-control {
-    margin: 10%;
+  margin: 10%;
 }
 
 .bot-btn {
-    border: 2px solid gray;
-    padding: 15px 30px;
-    text-decoration: none;
-    color: gray;
-    transition: 0.2s;
-    margin: 7%;
+  border: 2px solid gray;
+  padding: 15px 30px;
+  text-decoration: none;
+  color: gray;
+  transition: 0.2s;
+  margin: 7%;
 }
 
 .bot-btn:hover {
-    background-color: gray;
-    color: white;
+  background-color: gray;
+  color: white;
 }
 
 .custom-line {
-    width: 90%;
-    background-color: grey;
-    height: 1px;
+  width: 90%;
+  background-color: grey;
+  height: 1px;
 }
 
 #find-me {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 #find-me-img {
-    width: 40%;
+  width: 40%;
+  transition: 0.5s;
 }
 
 #find-me-icon {
-    width: 20%;
-    display: flex;
-    justify-content: space-evenly;
-    margin: 1% 0 4%;
+  width: 20%;
+  display: flex;
+  justify-content: space-evenly;
+  margin: 1% 0 4%;
+}
+
+#find-me-icon:hover .custom-icon {
+  color: grey;
 }
 
 .custom-icon {
-    color: gray;
-    transition: 0.5s;
+  color: black;
+  transition: 0.5s;
 }
 
-.custom-icon:hover {
-    color: black;
+#find-me-icon:hover .custom-icon:hover {
+  color: black;
 }
 
 #footer {
-    margin: 4% 0 6% 0;
+  margin: 4% 0 6%;
 }
 
 #footer-name {
-    font-size: 150%;
-    margin-bottom: 2%;
+  font-size: 150%;
+  margin-bottom: 2%;
 }
 
 #footer-tag {
-    font-size: 120%;
-    transition: 0.5s;
-    color: gray;
+  font-size: 120%;
+  transition: 0.5s;
+  color: gray;
 }
 
 #footer-tag:hover {
-    color: black;
+  color: black;
 }
 /* ABOUT-SECTION */
 #about-section {
-    text-align: left;
-    margin: 5.5%;
-    font-size: 120%;
-    line-height: 1.6;
+  text-align: left;
+  margin: 5.5%;
+  font-size: 120%;
+  line-height: 1.6;
 }
 
 /* CALLIPRAPHY-SECTION */
 .callipraphy-control {
-    display: flex;
-    align-items: center;
-    margin: 5.5% 4% 5.5% 5.5%;
-    font-size: 110%;
-    line-height: 1.6;
+  display: flex;
+  align-items: center;
+  margin: 5.5%;
+  font-size: 110%;
+  line-height: 1.6;
 }
 
 .calli-img {
-    width: 40%;
-    border: 1px solid black;
+  width: 40%;
+  border: 1px solid black;
+  transition: 0.5s;
 }
 
 .calli-para-right {
-    text-align: left;
-    margin-left: 4%;
+  text-align: left;
+  margin-left: 4%;
 }
 
 .calli-para-left {
-    text-align: left;
-    margin-right: 4%;
+  text-align: left;
+  margin-right: 4%;
 }
 
 .callipraphy-control-center {
-    align-items: center;
-    margin: 5.5% 4% 5.5% 5.5%;
-    font-size: 110%;
-    line-height: 1.6;
+  align-items: center;
+  margin: 5.5%;
+  font-size: 110%;
+  line-height: 1.6;
 }
 
 .calli-para-center {
-    text-align: left;
+  text-align: left;
 }
 
 #placecards-img {
-    margin-top: 7%;
-    width: 50%;
+  margin-top: 7%;
+  width: 50%;
+  transition: 0.5s;
 }
 
 #sinage-img {
-    margin-top: 7%;
-    width: 80%;
+  margin-top: 7%;
+  width: 80%;
+  transition: 0.5s;
 }
 
-@media only screen and (max-width: 750px) {
-    #logo {
-        width: 60%;
-    }
-    
-    #quote-1 {
-        font-size: 95%;
-    }
+/* PORTRAIT-SECTION */
+.portrait-control {
+  display: flex;
+  margin: 5.5% 4% 5.5% 5.5%;
+  font-size: 110%;
+  line-height: 1.6;
+}
 
-    #quote-2 {
-        font-size: 95%;
-    }
+.portrait-img {
+  width: 20%;
+  border: 1px solid black;
+  transition: 0.5s;
+}
 
-    .callipraphy-control {
-         display: block;
-         font-size: 120%;
-    }
+.portrait-img-bot {
+  width: 22%;
+  border: 1px solid black;
+}
 
-    .calli-img {
-         width: 100%;
-    }
+#web-interfact {
+  display: flex;
+  margin: 3.8%;
+  justify-content: space-around;
+  transition: 0.5s;
+}
 
-    #placecards-img {
-        width: 100%;
-    }
+#mobile-interfact {
+  display: none;
+  transition: 0.5s;
+}
 
-    .calli-para-right {
-        margin: 0;
-    }
+.mobile-img {
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 6.5%;
+}
 
-    .calli-para-left {
-        margin-bottom: 3%;
-    }
+/* CONTACT-SECTION */
+#form {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  margin: 4% 5.5%;
+}
 
-    #sinage-img {
-        width: 100%;
-    }
+.row-pos {
+  display: flex;
+  justify-content: center;
+}
 
-    #bot-control {
-        margin: 20%;
-    }
+.colum-pos {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
 
-    .bot-btn {
-        margin: 1.5%;
-    }
+@media only screen and (max-width: 780px) {
+  #web-interfact {
+    display: none;
+  }
 
-    .picture {
-        width: 90%;
-        height: 300px;
-    }
+  #mobile-interfact {
+    display: flex;
+    flex-direction: column;
+  }
 
-    #find-me-img {
-        width: 80%;
-    }
+  .portrait-img-bot {
+    width: 40%;
+  }
 
-    #find-me-icon {
-        margin: 4% 0 8%;
-    }
+  #top-bar {
+    display: none;
+  }
 
-    .custom-icon {
-        margin: 0 15%;
-    }
+  #logo {
+    width: 60%;
+  }
+
+  #quote-1 {
+    font-size: 95%;
+  }
+
+  #quote-2 {
+    font-size: 95%;
+  }
+
+  .callipraphy-control {
+    display: block;
+    font-size: 120%;
+  }
+
+  .portrait-control {
+    display: block;
+    font-size: 120%;
+  }
+
+  .portrait-img {
+    width: 100%;
+  }
+
+  .calli-img {
+    width: 100%;
+  }
+
+  #placecards-img {
+    width: 100%;
+  }
+
+  .calli-para-right {
+    margin: 0;
+  }
+
+  .calli-para-left {
+    margin-right: 0;
+    margin-bottom: 3%;
+  }
+
+  #sinage-img {
+    width: 100%;
+  }
+
+  #bot-control {
+    margin: 20%;
+  }
+
+  .bot-btn {
+    margin: 1.5%;
+  }
+
+  .picture {
+    width: 90%;
+    height: 300px;
+  }
+
+  #find-me-img {
+    width: 80%;
+  }
+
+  #find-me-icon {
+    margin: 4% 0 8%;
+  }
+
+  .custom-icon {
+    margin: 0 15%;
+  }
 }
