--- a/styles.css
+++ b/styles.css
@@ -2,18 +2,75 @@ body {
   text-align: center;
   background-color: blanchedalmond;
   font-family: "Nunito", sans-serif;
+  margin: 0 6%;
 }
 
+/* SIDE NAV */
+
+#more-btn {
+  display: none;
+  align-items: start;
+  color: gray;
+  margin-top: 8%;
+  transition: 0.5s;
+}
+
+#logo-section {
+  display: flex;
+}
+
+.sidenav {
+  display: none;
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: blanchedalmond;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.nav-btn {
+  padding: 8px 8px 8px 32px;
+  text-align: left;
+  text-decoration: none;
+  font-size: 100%;
+  font-weight: bold;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.nav-btn:hover {
+  color: black;
+}
+
+#closebtn {
+  display: none;
+  align-items: start;
+  margin-top: 8%;
+  transition: 0.5s;
+  color: gray;
+}
+
+/* SIDE NAV */
+
 #logo {
-  width: 30%;
-  padding: 2%;
-  margin-bottom: 1.5%;
+  width: 40%;
+  padding: 3% 0;
   transition: 0.5s;
 }
 
 #top-bar {
   display: flex;
   justify-content: center;
+  margin-bottom: 3%;
+  font-size: 100%;
+  font-weight: bold;
 }
 
 #top-bar:hover .top-btn {
@@ -74,21 +131,22 @@ body {
 }
 
 .picture {
-  width: 90%;
-  margin: 3%;
+  width: 100%;
+
   border: 1px solid black;
+  border-radius: 8px;
   transition: 0.5s;
 }
 
 #quote-1 {
   text-align: right;
-  margin: 3% 6.5% 3% 0;
+  margin: 7% 0;
   line-height: 1.6;
 }
 
 #quote-2 {
   text-align: left;
-  margin: 3% 0 0 5.5%;
+  margin: 7% 0;
   line-height: 1.6;
 }
 
@@ -99,6 +157,8 @@ p {
 }
 
 #bot-control {
+  display: flex;
+  justify-content: center;
   margin: 10%;
 }
 
@@ -117,7 +177,7 @@ p {
 }
 
 .custom-line {
-  width: 90%;
+  width: 100%;
   background-color: grey;
   height: 1px;
 }
@@ -132,6 +192,7 @@ p {
 #find-me-img {
   width: 40%;
   transition: 0.5s;
+  margin-top: 5%;
 }
 
 #find-me-icon {
@@ -175,7 +236,7 @@ p {
 /* ABOUT-SECTION */
 #about-section {
   text-align: left;
-  margin: 5.5%;
+  margin-top: 5.5%;
   font-size: 120%;
   line-height: 1.6;
 }
@@ -184,7 +245,6 @@ p {
 .callipraphy-control {
   display: flex;
   align-items: center;
-  margin: 5.5%;
   font-size: 110%;
   line-height: 1.6;
 }
@@ -192,38 +252,35 @@ p {
 .calli-img {
   width: 40%;
   border: 1px solid black;
+  border-radius: 8px;
+  margin-top: 5%;
   transition: 0.5s;
 }
 
 .calli-para-right {
   text-align: left;
-  margin-left: 4%;
+  margin-left: 5%;
 }
 
 .calli-para-left {
   text-align: left;
-  margin-right: 4%;
-}
-
-.callipraphy-control-center {
-  align-items: center;
-  margin: 5.5%;
-  font-size: 110%;
-  line-height: 1.6;
+  margin-right: 5%;
 }
 
 .calli-para-center {
   text-align: left;
+  margin-top: 2%;
+  font-size: 110%;
+  line-height: 1.6;
 }
 
 #placecards-img {
-  margin-top: 7%;
-  width: 50%;
+  margin: 7% 0 5%;
+  width: 60%;
   transition: 0.5s;
 }
 
 #sinage-img {
-  margin-top: 7%;
   width: 80%;
   transition: 0.5s;
 }
@@ -231,7 +288,7 @@ p {
 /* PORTRAIT-SECTION */
 .portrait-control {
   display: flex;
-  margin: 5.5% 4% 5.5% 5.5%;
+  margin: 5.5% 0 5.5%;
   font-size: 110%;
   line-height: 1.6;
 }
@@ -239,18 +296,20 @@ p {
 .portrait-img {
   width: 20%;
   border: 1px solid black;
+  border-radius: 8px;
   transition: 0.5s;
 }
 
 .portrait-img-bot {
-  width: 22%;
+  width: 20%;
   border: 1px solid black;
+  border-radius: 8px;
 }
 
 #web-interfact {
   display: flex;
-  margin: 3.8%;
-  justify-content: space-around;
+  margin-top: 10%;
+  justify-content: space-between;
   transition: 0.5s;
 }
 
@@ -261,8 +320,8 @@ p {
 
 .mobile-img {
   display: flex;
-  justify-content: space-evenly;
-  margin-bottom: 6.5%;
+  justify-content: space-between;
+  margin: 5% 0 6.5%;
 }
 
 /* CONTACT-SECTION */
@@ -270,21 +329,146 @@ p {
   display: flex;
   flex-direction: column;
   align-items: start;
-  margin: 4% 5.5%;
+  margin: 4% 0;
+  font-size: 120%;
+  color: gray;
 }
 
 .row-pos {
   display: flex;
-  justify-content: center;
+  width: 100%;
+  justify-content: space-between;
 }
 
 .colum-pos {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  text-align: left;
+  width: 500%;
 }
 
-@media only screen and (max-width: 780px) {
+.custom-input {
+  height: 40px;
+  border-radius: 8px;
+  border: 2px solid gray;
+  width: 100%;
+  transition: 0.2s;
+}
+
+.custom-input-hover:hover {
+  border: 2px solid black;
+  box-shadow: 0px 0px 3px rgb(20, 19, 19);
+}
+
+.custom-sub-name {
+  font-size: 80%;
+}
+
+.custom-select {
+  width: 110%;
+  height: 25px;
+  color: gray;
+  font-size: 90%;
+  border: 2px solid gray;
+  border-radius: 8px;
+  transition: 0.2s;
+}
+
+.custom-textarea {
+  border-radius: 8px;
+  border: 2px solid gray;
+  transition: 0.1s;
+  resize: vertical;
+  width: 100%;
+  height: 100px;
+}
+
+.custom-input-date {
+  height: 40px;
+  border-radius: 8px;
+  border: 2px solid gray;
+  width: 60%;
+  transition: 0.5s;
+}
+
+.row-pos-date {
+  display: flex;
+  width: 20%;
+  transition: 0.2s;
+  justify-content: space-between;
+}
+
+.submit-btn {
+  width: 150px;
+  height: 50px;
+  border: 2px solid #bacb90;
+  border-radius: 8px;
+  font-size: 90%;
+  color: gray;
+  background-color: transparent;
+  transition: 0.2s;
+  cursor: pointer;
+}
+
+.submit-btn:hover {
+  background-color: white;
+  box-shadow: 0px 0px 2px #88b022;
+  color: gray;
+}
+
+#thankyou-img {
+  width: 70%;
+  border: 1px solid black;
+  border-radius: 8px;
+  margin-bottom: 10%;
+}
+
+.wrong-notif {
+  background-color: #cc3b3b;
+  color: white;
+  font-size: 80%;
+  padding: 5px 0 5px 12px;
+  text-align: left;
+  border-radius: 5px;
+  margin-bottom: 2%;
+}
+
+.wrong-position {
+  transition: 0.5s;
+  width: 40%;
+}
+
+#form-controller {
+  display: none;
+}
+
+#name-controller {
+  display: none;
+}
+
+#email-controller {
+  display: none;
+}
+
+#descript-controller {
+  display: none;
+}
+
+#date-controller {
+  display: none;
+}
+
+@media only screen and (max-width: 900px) {
+  .wrong-position {
+    width: 80%;
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  .wrong-position {
+    width: 100%;
+  }
+
   #web-interfact {
     display: none;
   }
@@ -295,7 +479,7 @@ p {
   }
 
   .portrait-img-bot {
-    width: 40%;
+    width: 45%;
   }
 
   #top-bar {
@@ -303,7 +487,8 @@ p {
   }
 
   #logo {
-    width: 60%;
+    width: 80%;
+    padding: 5%;
   }
 
   #quote-1 {
@@ -351,6 +536,7 @@ p {
 
   #bot-control {
     margin: 20%;
+    flex-direction: column;
   }
 
   .bot-btn {
@@ -358,7 +544,7 @@ p {
   }
 
   .picture {
-    width: 90%;
+    width: 100%;
     height: 300px;
   }
 
@@ -373,4 +559,19 @@ p {
   .custom-icon {
     margin: 0 15%;
   }
+
+  .row-pos-date {
+    width: 50%;
+  }
+
+  #more-btn {
+    display: flex;
+  }
+
+  .sidenav {
+    display: unset;
+  }
+}
+
+@media screen and (max-width: 780px) {
 }
